JBTM-1979. REST-AT integration API recovery tests fix on IPv6